[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "repolens"
version = "0.1.0"
description = "Local-first repository insight CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Codex" }
]
keywords = ["cli", "repository", "analysis", "markdown", "json"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]
dependencies = [
  "pathspec>=0.12.1",
]

[project.urls]
Homepage = "https://github.com/moonxmboo-eng/coola"
Repository = "https://github.com/moonxmboo-eng/coola"
Issues = "https://github.com/moonxmboo-eng/coola/issues"

[project.scripts]
repolens = "repolens.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [".venv", "tests/fixtures"]
